<resources>
    <string name="app_name">Lets Workout</string>

    <!-- Muscle Groups -->
    <string-array name="muscle_groups">
        <item>Chest</item>
        <item>Legs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Abs</item>
        <item>Shoulders</item>
    </string-array>

    <!-- Days -->
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    
    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Body</item>
        <item>Training Routine</item>
        <item>Schedule</item>
        <item>Statistics</item>
        <item>Timer</item>
        <item>Settings</item>
    </string-array>

    <!-- Navigation Drawer Menu Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_house</item>
        <item>@drawable/ic_balance</item>
        <item>@drawable/ic_gym_chart</item>
        <item>@drawable/ic_time</item>
        <item>@drawable/ic_graphic</item>
        <item>@drawable/ic_clock</item>
        <item>@drawable/ic_settings</item>
    </array>

    <!-- Home message -->
    <string name="home_message">Just do it!</string>

    <!-- Toast Messages -->
    <string name="toast_login_success">Welcome!</string>
    <string name="toast_login_failure">The username or password are incorrect!</string>
    <string name="toast_name_field_empty">The name field cannot be empty!</string>
    <string name="toast_login_field_empty">The login field cannot be empty!</string>
    <string name="toast_password_field_empty">The password field cannot be empty!</string>
    <string name="toast_sets_field_empty">The sets field cannot be empty!</string>
    <string name="toast_reps_field_empty">The reps field cannot be empty!</string>
    <string name="toast_any_exercise_selected">You must select an exercise!</string>
    <string name="toast_muscle_group_empty">You must select at least one muscle group!</string>
    <string name="toast_delete_routine_failed">Something went wrong!Sorry..</string>
    <string name="toast_no_body_registered">No data to show!</string>
    <string name="toast_no_data_to_show">There is no data to show!</string>

    <!-- Hints -->
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_name">name</string>
    <string name="hint_login">login</string>
    <string name="hint_muscle_group">muscle group</string>
    <string name="hint_routine_name">Set a name (optional)</string>
    <string name="hint_sets">Sets</string>
    <string name="hint_reps">Reps</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_update_current_measures">Update Current Measures</string>
    <string name="button_register_new_measures">Register New Measures</string>
    <string name="button_new_routine">New Routine</string>
    <string name="button_add">Add</string>
    <string name="button_start">Start</string>
    <string name="button_reset">Reset</string>
    <string name="button_stop">Stop</string>
    <string name="button_plus_sign">+</string>
    <string name="button_delete_routine">Delete Routine</string>
    <string name="button_compare">Compare</string>

    <!-- TextView -->
    <string name="text_view_weight">Weight: </string>
    <string name="text_view_height">Height: </string>
    <string name="text_view_right_upper_arm">Right Upper Arm: </string>
    <string name="text_view_left_upper_arm">Left Upper Arm: </string>
    <string name="text_view_right_forearm">Right Forearm: </string>
    <string name="text_view_left_forearm">Left Forearm: </string>
    <string name="text_view_right_thigh">Right Thigh: </string>
    <string name="text_view_left_thigh">Left Thigh: </string>
    <string name="text_view_right_calf">Right Calf: </string>
    <string name="text_view_left_calf">Left Calf: </string>
    <string name="text_view_waist">Waist: </string>
    <string name="text_view_shoulder">Shoulder: </string>
    <string name="text_view_chest">Chest: </string>
    <string name="text_view_new_body_description">Write down your body measurements. (no need to fill all the fields)\n
The values are in centimeters.</string>
    <string name="text_view_timer">00 : 00 : 00</string>
    <string name="text_view_new_exercise">New Exercise</string>
    <string name="text_view_weight_chart">Weight Chart</string>
    <string name="text_view_body_measurements_title">Compare Body measurements between dates</string>
    <string name="text_view_automatic_login">Automatic login</string>
    <string name="text_view_language">Language</string>
    <string name="text_view_timer_divisor"> : </string>

    <!-- Arrays of exercises -->
    
    <string-array name="chest_exercises">
        <item>Peck Deck</item>
        <item>Barbell Bench Press</item>
        <item>Incline Barbell Bench Press</item>
        <item>Decline Barbell Bench Press</item>
        <item>Crucifix</item>
        <item>Pullover</item>
        <item>Crossover</item>
        <item>Dumbbell Bench Press</item>
        <item>Fly</item>
    </string-array>
    
    <string-array name="leg_exercises">
        <item>Leg Extension</item>
        <item>Leg Curl</item>
        <item>Machine Adduction</item>
        <item>Machine Abduction</item>
        <item>Leg Press 45</item>
        <item>Squat</item>
        <item>Glutes Machine</item>
        <item>45 Degree Calf Raise</item>
        <item>Seated Calf Raise</item>
        <item>Lunge Kick</item>
        <item>Glutes Graviton</item>
        <item>Glutes Crossover</item>
        <item>Stiff</item>
        <item>Leg Press 90</item>
    </string-array>

    <string-array name="back_exercises">
        <item>Lat Pull-down (back)</item>
        <item>Wide Grip</item>
        <item>Narrow Grip</item>
        <item>Crossover</item>
        <item>Pull-up</item>
        <item>Seated Row</item>
        <item>Unilateral Seated Row</item>
        <item>Inverse Crucifix</item>
        <item>Face Pull Row</item>
        <item>Back extension</item>
        <item>Inverse Row</item>
        <item>Inverse Grip</item>
    </string-array>

    <string-array name="biceps_exercises">
        <item>Biceps Barbell</item>
        <item>Biceps Alternate Dumbbell</item>
        <item>Sitting Biceps Curl</item>
        <item>Biceps Hammer Curl</item>
        <item>Biceps Scott</item>
        <item>Biceps Unilateral Cross</item>
        <item>Curl Standing Cross</item>
        <item>Forearm</item>
        <item>Biceps 21</item>
    </string-array>

    <string-array name="triceps_exercises">
        <item>Triceps Extension</item>
        <item>Triceps Inverse</item>
        <item>Overhead Barbell Extension</item>
        <item>Triceps French Press</item>
        <item>Triceps Kickback</item>
        <item>Triceps Parallel Bar</item>
        <item>Triceps Rope In</item>
        <item>Triceps Close Grip</item>
    </string-array>

    <string-array name="abs_exercises">
        <item>Abs Crunch</item>
        <item>Plank</item>
        <item>Parallel</item>
        <item>Ball</item>
        <item>Leg Raise</item>
    </string-array>

    <string-array name="shoulder_exercises">
        <item>Shoulder Press</item>
        <item>Dumbbell Press</item>
        <item>Machine Shoulder Press</item>
        <item>Dumbbell Lateral Raise</item>
        <item>Front Deltoid Raise</item>
        <item>Shoulder Crucifix</item>
        <item>Shrug (Dumbbell)</item>
        <item>Upright Rows</item>
        <item>Shoulder Arnold Press</item>
        <item>Inverse Front Deltoid Raise</item>
    </string-array>

    <!--  Check Box  -->
    <string name="check_main_routine">Main Routine?</string>
    <string name="check_remember_me">Remember me</string>

    <!--  Dialog  -->
    <string name="dialog_confirm_changes">Are you sure you want to save the changes?</string>
    <string name="dialog_delete_routine">Are you sure you want to delete this routine?</string>
    <string name="dialog_set_chronometer">Set Chronometer</string>
    <string name="dialog_chronometer_message">(Minute/Second)</string>

    <!--  Statistics Array  -->
    <string-array name="statistics">
        <item>Body Measurements</item>
        <item>Weight</item>
    </string-array>

    <array name="statistics_menu_icon">
        <item>@drawable/ic_measuring_tape_64</item>
        <item>@drawable/ic_scale_2_64</item>
    </array>

    <string-array name="body_measure_items">
        <item>Right Upper Arm</item>
        <item>Left Upper Arm</item>
        <item>Right Forearm</item>
        <item>Left Forearm</item>
        <item>Chest</item>
        <item>Right Thigh</item>
        <item>Left Thigh</item>
        <item>Right Calf</item>
        <item>Left Calf</item>
        <item>Waist</item>
        <item>Shoulder</item>
        <item>Height</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>
    
    <string-array name="language_code">
        <item>en</item>
        <item>pt</item>
        <item>es</item>
    </string-array>

    <!-- EditText -->
    <string name="edit_text_00">00</string>

</resources>
