<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_project">

    <RelativeLayout
        android:id="@+id/activityLogin_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUserName"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:textStyle="italic"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/activityLogin_checkRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/check_remember_me"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityLogin_checkRememberMe"
            android:layout_marginTop="10dp"
            android:hint="@string/button_login"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color" />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btLogin"
            android:layout_marginTop="15dp"
            android:hint="@string/button_sign_up"
            android:background="@drawable/custom_button_states_2"
            android:textColor="@drawable/button_text_color"/>

    </RelativeLayout>


</RelativeLayout>