<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dialogExerciseRepetition_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Spinner
            android:id="@+id/dialogExerciseRepetition_spinnerExercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/dialogExerciseRepetition_etSets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_sets"/>

        <EditText
            android:id="@+id/dialogExerciseRepetition_etReps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_reps"/>


    </LinearLayout>

    <Button
        android:id="@+id/dialogExerciseRepetition_btConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogExerciseRepetition_linearLayout"
        android:layout_marginTop="4dp"
        android:text="@string/button_confirm"/>


</RelativeLayout>