<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background_project">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSignUp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activitySignUp_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/signUp_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textStyle="italic"
            android:focusable="true"/>

        <EditText
            android:id="@+id/signUp_etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_etName"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_login"
            android:textStyle="italic"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/signUp_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_etLogin"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/signUp_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp_etPassword"
            android:layout_marginTop="10dp"
            android:text="@string/button_confirm"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color"/>

    </RelativeLayout>

</RelativeLayout>