<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background_project">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/fragmentTimer_txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_timer"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentTimer_txtTimer"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragmentTimer_btStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_start"
                android:textSize="30sp"
                android:background="@drawable/custom_button_states"
                android:textColor="@drawable/button_text_color"/>

            <Button
                android:id="@+id/fragmentTimer_btReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_reset"
                android:textSize="30sp"
                android:background="@drawable/custom_button_states"
                android:textColor="@drawable/button_text_color"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>